# cellstate-agent-portfolio

./: .gitattributes  .gitignore  PUBLIC_EXPORT_MANIFEST.md  README.md  prototype_agent.py  pyproject.toml  run-cellstate-agent.sh
config/: resources.env.example
demo_evidence/gzmb_cd8_nbm_vs_ndmm/: README.md  SHA256SUMS  evidence_bundle.json  public_artifact_manifest.json
demo_evidence/gzmb_cd8_nbm_vs_ndmm/design/: replicate_counts_by_dataset_group.csv
demo_evidence/gzmb_cd8_nbm_vs_ndmm/reports/: complete_signed_statistics.tsv  critic_report.json  (+2 more)
docs/: README.md  index.html
docs/public/: ASSET_POLICY.md  LICENSING_CHECKLIST.md  README.md
public_export/: manifest.toml
resources/tf_activity/: README.md
scripts/: build_public_export.py  prepare_tf_resources.py  validate_tf_resources.py
src/cellstate/: __init__.py  cache.py  capability_specs.py  context.py  evidence.py  provenance.py
tests/: test_abundance.py  test_age_association.py  test_application_cli.py  test_arbitrary_two_group_de.py  test_arbitrary_two_group_de_real_runtime.py  test_atlas_lodo.py  test_atlas_lodo_plotting.py  test_capability_contracts.py  test_data_interchange.py  test_deseq2_real_runtime.py  test_evidence.py  test_presentation.py  test_progression.py  test_pseudobulk_de.py  test_public_export.py  test_reasoning.py  test_reproducibility_harness.py  test_shared_infrastructure.py  test_tf_activity.py  test_tf_activity_plotting.py  test_tf_regulatory_network.py  test_tf_regulatory_network_plotting.py  test_tf_resource_configuration.py
tests/fixtures/: README.md
(+115 files in other folders)
