[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellstate-agent"
version = "0.1.0"
description = "Auditable scientific operating system for computational biology"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0,<3; python_version < '3.11'",
    "anndata>=0.10,<1",
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<3",
    "openai>=1.50,<3",
    "pandas>=2.0,<3",
    "pydantic>=2.7,<3",
    "reportlab>=4.0,<5",
    "rich>=13.7,<15",
    "scipy>=1.10,<2",
]

[project.optional-dependencies]
test = [
    "pypdf>=5,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cellstate = [
    "nodes/*.R",
    "data_interchange/*.R"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
